--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IndexActivity">
-
+    tools:context=".MainActivity">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -32,24 +31,25 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/txt_AP"
             android:inputType="text"
-            android:text="Apellido materno: " />
-
+            android:text="Apellido materno:" />
         <EditText
             android:id="@+id/int_ED"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/txt_AM"
             android:inputType="number"
             android:text="Edad:"/>
 
         <Button
+            android:id="@+id/btn_EN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Botton"
-            android:layout_below="@+id/int_ED"/>
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/int_ED"
+            android:text="Enviar" />
     </RelativeLayout>
 
 
-</ScrollView>
+</LinearLayout>
